tests/errors/undefined_var.bs
// Test: Should FAIL - using undefined variable
fn main() {
    int x = y + 1
}
